--- a/smooth_moove.html
+++ b/smooth_moove.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/normalize.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <script src="https://s3.amazonaws.com/themes.g5dxm.com/shared/javascripts/modernizr.custom.js"></script>
+    <script src="script/modernizr.custom.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   </head>
 
